// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`video reducer should handle FETCH_VIDEOS_FAILURE 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {},
  "error": true,
  "isFetching": false,
  "pageToken": "",
}
`;

exports[`video reducer should handle FETCH_VIDEOS_REQUEST 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": true,
  "pageToken": "",
}
`;

exports[`video reducer should handle FETCH_VIDEOS_SUCCESS 1`] = `
Object {
  "allIds": Array [
    "M8l2aGMjKHI",
    "GcSACxUbqtg",
  ],
  "byId": Object {
    "GcSACxUbqtg": Object {
      "id": "GcSACxUbqtg",
    },
    "M8l2aGMjKHI": Object {
      "id": "M8l2aGMjKHI",
    },
  },
  "error": false,
  "isFetching": false,
  "pageToken": "CBQQAA",
}
`;

exports[`video reducer should handle FETCH_VIDEOS_SUCCESS 2`] = `
Object {
  "allIds": Array [
    "M8l2aGMjKHI",
    "GcSACxUbqtg",
    "Flze-rwT7lM",
    "L4TIM6W7u-M",
  ],
  "byId": Object {
    "Flze-rwT7lM": Object {
      "id": "Flze-rwT7lM",
    },
    "GcSACxUbqtg": Object {
      "id": "GcSACxUbqtg",
    },
    "L4TIM6W7u-M": Object {
      "id": "L4TIM6W7u-M",
    },
    "M8l2aGMjKHI": Object {
      "id": "M8l2aGMjKHI",
    },
  },
  "error": false,
  "isFetching": false,
  "pageToken": "CCgQAA",
}
`;

exports[`video reducer should handle UPDATE_ACTIVE_CHANNEL 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": false,
  "pageToken": "",
}
`;

exports[`video reducer should handle unknown action type 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": false,
  "pageToken": "",
}
`;

exports[`video reducer should return initial state 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": false,
  "pageToken": "",
}
`;
